--- a/src/app/Templates/header/header.component.html
+++ b/src/app/Templates/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark bg-dark ">
     <a class="navbar-brand mx-lg-4 mx-xs-4 mx-sm-4" href="#">
-        <img src="../../../assets/pokedex.png" width="30" height="30" class="d-inline-block align-top" alt="" id="img-tp">
+        <img src="https://icon-library.com/images/pokedex-icon/pokedex-icon-7.jpg" width="30" height="30" class="d-inline-block align-top" alt="" id="img-tp">
         <span class="navbar-text">
             POKEDEX
         </span>
